--- a/css/responsive/responsive.sass
+++ b/css/responsive/responsive.sass
@@ -36,7 +36,54 @@
         margin-left: 62%
 
 /* Mobile */
-@media screen and (max-width: 414px) and (min-width: 360px)
+@media screen and (max-width: 834px)
+    #back
+        margin-left: -12%
+
+    #type
+        margin-left: -12%
+
+    #attrib
+        margin-left: -17.7%
+        padding: 25px 50px 50px 30px
+
+    #cards
+        margin-left: 65%
+
+@media screen and (max-width: 800px)
+    #back
+        margin-left: -15%
+
+    #type
+        margin-left: -15%
+
+    #attrib
+        margin-left: -18.8%
+
+@media screen and (max-width: 768px)
+    #back
+        margin-left: -18%
+
+    #type
+        margin-left: -18%
+
+    #attrib
+        margin-left: -19.7%
+        padding: 20px 50px 70px 30px
+
+@media screen and (max-width: 688px)
+    #back
+        p
+            margin-left: 31%
+
+    #attrib
+        margin-left: -21.7%
+        padding: 10px 60px 115px 20px
+
+    #cards
+        margin-left: 68%
+
+@media screen and (max-width: 414px)
     .card
         width: 40%
         margin: 7% auto 2% 1%
@@ -69,16 +116,11 @@
             font-size: 9px
 
     #cards
-        margin-left: 65%
-        
         button
-            width: 8.5rem
+            width: 7.5rem
             font-size: 11px
 
 @media screen and (max-width: 393px)
-    .card
-        margin: 7% auto 2% 1%
-    
     #back
         p
             margin-left: 160px
@@ -106,7 +148,6 @@
         margin-left: -27.8%
 
     #cards
-
         button
             width: 7.2rem
 
@@ -114,6 +155,10 @@
     #attrib
         margin-left: -29.2%
         padding: 30px 48px 30px 32px
+
+    #back 
+        p
+            margin-left: 43%
     
     #cards
         margin-left: 68%
